<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/text_view_question_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_question"
        android:gravity="center_horizontal"
        android:text="@string/question_6"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_question_6"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton1_question_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin"
            android:text="@string/answer_1_question_6"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioButton2_question_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin"
            android:text="@string/answer_2_question_6"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioButton3_question_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin"
            android:text="@string/answer_3_question_6"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioButton4_question_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin"
            android:text="@string/answer_4_question_6"
            android:textAppearance="?android:textAppearanceMedium" />
    </RadioGroup>
</RelativeLayout>