<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/text_view_question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_title"
        android:gravity="center_horizontal"
        android:text="@string/question_3"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black" />

    <CheckBox
        android:id="@+id/check_box_1_question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_question_3"
        android:layout_marginLeft="@dimen/margin_check_box"
        android:layout_marginTop="@dimen/dimen_margin"
        android:text="@string/answer_1_question_3"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/check_box_2_question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_box_1_question_3"
        android:layout_marginLeft="@dimen/margin_check_box"
        android:layout_marginTop="@dimen/dimen_margin"
        android:text="@string/answer_2_question_3"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/check_box_3_question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_box_2_question_3"
        android:layout_marginLeft="@dimen/margin_check_box"
        android:layout_marginTop="@dimen/dimen_margin"
        android:text="@string/answer_3_question_3"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/check_box_4_question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_box_3_question_3"
        android:layout_marginLeft="@dimen/margin_check_box"
        android:layout_marginTop="@dimen/dimen_margin"
        android:text="@string/answer_4_question_3"
        android:textAppearance="?android:textAppearanceMedium" />

</RelativeLayout>